--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,7 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+    reporter: [ ['html', { open: 'never'}], ['list'] ],
 jobs:
   test:
     timeout-minutes: 60
