--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,14 +14,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: |
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
+        run: sudo npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
