--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,8 +13,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Install packages
+        run: npm install --package-lock-only     
       - name: Install dependencies
-        run: sudo npm ci
+        run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
