--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,18 +1,27 @@
-name: Mijn Workflow
-
+name: Playwright Tests
 on:
   push:
-    branches:
-    - main
-jobs: 
-  build:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
+jobs:
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout-repository
-        uses: actions/checkout@v2
-        
-      - name: Voer script uit
-        run: |
-          # Hier komt je scipt
-          echo "Hello, Github Actions!"
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
