--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Install package-lock
+        run: npm config set package-lock true
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
