--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,8 @@ jobs:
         run: npm i find-package-json
       - name: Install dependencies
         run: npm ci
+      - name: Install Playwright test
+        run: npm install -D @playwright/test
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
