--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,9 +23,5 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
+      - uses: workflows/case-overview.spec.ts
+        
