--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright test
-        run: npm install --D @playwright/test
+        run: npm init playwright@latest
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
