--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright test
+        run: npm install --D @playwright/test
+      - name: Install Playwright latest
         run: npm init playwright@latest
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
