--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm install --D @playwright/test
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      - name: Install npm types
+        run: npm i -D @types/node @types/jest
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/checkout@v1
