--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Find package-lock
         run: npm i find-package-json
       - name: Install dependencies
+        run: npm install
+      - name: Install ci
         run: npm ci
       - name: Install Playwright test
         run: npm install --D @playwright/test
