--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install ci
         run: npm ci
       - name: Install npm chance
-        run: npm install chance
+        run: npm i chance
       - name: Install Playwright test
         run: npm install --D @playwright/test
       - name: Install Playwright Browsers
